test/spec_vectors/table_grow/ok/module_6.wat
(module $Tgit1 (table (export "table") (import "grown-table" "table") 2 funcref) (func (export "grow") (result i32) (table.grow (ref.null func) (i32.const 1))))