test/spec_vectors/table_grow/fail/module_13.wat
(module (table $t 1 externref) (func $type-result-i32-vs-empty (table.grow $t (ref.null extern) (i32.const 0))))